proto definitions: create group request
